--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel App</title>
+    <title>Challenge: Render 3D data</title>
   </head>
   <body>
     <div id="app"></div>
